--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Update gist
-        uses: matchai/waka-box@master
+        uses: codepark-kr/waka-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: 6da1bedba8be821a74142c1bf8224688
